npm nao permite duplicacao de nomes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "gulp-github",
+    "name": "cm.gulp-github",
     "description": "Clone/Deploy selected folder to GitHub with Gulp (gulpjs.com)",
     "version": "0.0.1",
     "homepage": "https://github.com/ciro-maciel/gulp-github",
