--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "gulp-github-deploy",
     "description": "Deploy selected folder to GitHub with Gulp (gulpjs.com)",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "homepage": "https://github.com/ciro-maciel/gulp-github-deploy",
     "repository": "git://github.com/ciro-maciel/gulp-github-deploy.git",
     "author": "Ciro Cesar Maciel <ciro.maciel@c37.co>",
@@ -12,9 +12,13 @@
         "shelljs": "latest",
         "gulp-util": "latest"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "gulp": "latest",
+        "jshint": "latest",
+        "gulp-bump": "latest",
+        "gulp-jshint": "latest"
+    },
     "scripts": {},
-    "engines": {},
     "keywords": [
         "gulp",
         "gulpjs",
