--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-    "name": "gulp-git-press",
-    "description": "Deploy selected folder to GitHub with Gulp (gulpjs.com)",
+    "name": "@ciro-maciel/gulp-git-push",
+    "description": "Push selected folder to Git (repositoryUrl) with Gulp (gulpjs.com)",
     "version": "0.1.0",
-    "homepage": "https://github.com/ciro-maciel/gulp-git-press",
-    "repository": "git://github.com/ciro-maciel/gulp-git-press.git",
-    "author": "Ciro Cesar Maciel <ciro.maciel@c37.co>",
+    "homepage": "https://github.com/ciro-maciel/gulp-git-push",
+    "repository": "git://github.com/ciro-maciel/gulp-git-push.git",
+    "author": {
+        "name": "Ciro Cesar Maciel",
+        "email": "ciro.maciel@c37.co"
+    },
+    "license": "CC-BY-SA-4.0",
     "main": "./index.js",
     "dependencies": {
-        "gulp": "latest",
-        "base-64": "latest",
-        "shelljs": "latest",
-        "gulp-util": "latest"
-    },
-    "devDependencies": {
-        "gulp": "latest",
-        "jshint": "latest",
-        "gulp-bump": "latest",
-        "gulp-jshint": "latest"
+        "base-64": "^0.1.0",
+        "gulp": "^3.9.1",
+        "gulp-util": "^3.0.8",
+        "shelljs": "^0.7.8"
     },
     "scripts": {},
     "keywords": [
         "gulp",
         "gulpjs",
-        "deploy",
-        "clone",
-        "gulp-git-press"
-    ],
-    "license": "MIT"
+        "push",
+        "tool",
+        "git",
+        "gulp-git-push"
+    ]
 }
